# role-nginx-wordpress

./: README.md  pyproject.toml  requirements.yml
.github/workflows/: molecule.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/: README.md
molecule/default/: ansible.cfg  converge.yml  molecule.yml  prepare.yml  requirements.yml  verify.yml
tasks/: main.yml
templates/: wordpress.conf.j2  wp-config.php.j2
vars/: debian.yml  main.yml  rocky.yml  ubuntu.yml
